--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ image: 'rust:latest'
 stages:
   - check
   - lint
- 
+
 
 variables:
   CARGO_HOME: $CI_PROJECT_DIR/cargo_cache
@@ -40,6 +40,8 @@ check:
   extends:
     - .common
     - .recreate_cache
+  before_script:
+    - rustup target add thumbv7m-none-eabi
   script:
     - cargo check --workspace
 
@@ -52,6 +54,7 @@ clippy-be:
     - job: check
       artifacts: false
   before_script:
+    - rustup target add thumbv7m-none-eabi
     - rustup component add clippy
   script:
     - cargo clippy
