--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,13 @@ rtt-target = { version = "0.3.1", features = ["cortex-m"] }
 # panic-halt = "0.2.0"
 #panic-abort = "0.3.2"
 
-[dev-dependencies.stm32f1]
+[dependencies.stm32f1]
 version = "0.13.0"
 features = ["stm32f103", "rt"]
 
-[dev-dependencies.stm32f1xx-hal]
+[dependencies.stm32f1xx-hal]
 features = ["stm32f103", "rt", "medium"]
-version = "^0.6.1"
+version = "^0.7.0"
 
 
 # Access to the stm32f103 HAL.
