--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "sent-driver"
 description = "A driver for SENT protocol"
 categories = ["embedded", "no-std"]
 version = "0.1.0"
-license = "OBSD"
+license = "0BSD"
 
 
 [dependencies]
